2001-03-25 Christoph Cullmann <crossfire@babylon2k.de>
        * rewrite of plugin API and manager, now loading/unloading nice

2001-03-22 Joseph Wenninger <jowenn@bigfoot.com>
        * single / multi instance mode configurable
          Cullmann's -n option forces a new instance
          Otherwise it uses the configuration from
          the settings dialog. At the moment -n is
          default start option

2001-03-21 Christoph Cullmann <crossfire@babylon2k.de>
        * QPopupMenu for filelist

2001-03-20 Christoph Cullmann <crossfire@babylon2k.de>
        * kant is now a normal KApplication

2001-03-18 Christoph Cullmann <crossfire@babylon2k.de>
        * big location changes of source files
        * KantFactory now in use by hole Kant app
        * KantPartView/Doc merged with KantView/Doc (make life more easy)

2001-03-18 Joseph Wenninger <jowenn@bigfoot.com>
        * openheader plugin opens the corresponding
          .h file for .cpp or .c, and vice versa
        * Hopefully fixed highlighting dialog for now.

2001-03-17 Joseph Wenninger <jowenn@bigfoot.com>
        * Syntaxhighlighting is now defined in cpp.xml, c.xml html.xml ...
          instead of a global syntax.xml.
          (Not ported completely yet)
        * Some simple reg expression work (see html.xml)

2001-03-17 Christoph Cullmann <crossfire@babylon2k.de>
        * moved textfilter stuff to a own plugin "textfilter"
        * cleaned up kantmainwindow.*

2001-03-16 Christoph Cullmann <crossfire@babylon2k.de>
        * search dialog comes up with selected text
        * backport of some KDevelop KWrite patches ;)

2001-03-15 Christoph Cullmann <crossfire@babylon2k.de>
        * kantpart finished
        * new kwrite using kantpart
        * removed old kwrite and kwritepart !
        * fixed menu and toolbar problems of the new KWrite app

2001-03-11 Christoph Cullmann <crossfire@babylon2k.de>
        * kwrite stuff merged into kant !!!!!
