@@ -5,12 +5,12 @@ rckantdir = $(kde_datadir)/kant
 rckant_DATA = kantui.rc syntax.xml kantpartui.rc kantpartbrowserui.rc
 
 syntaxkantdir = $(kde_datadir)/kant/syntax
-syntaxkant_DATA = cpp.xml c.xml html.xml
+syntaxkant_DATA = cpp.xml c.xml html.xml kbasic.xml objectivec.xml changelog.xml
 
 rckwritedir = $(kde_datadir)/kwrite
 rckwrite_DATA = kwriteui.rc
 
-syntaxkwritedir = $(kde_datadir)/kwrite/syntax
-syntaxkwrite_DATA = cpp.xml c.xml html.xml
+#syntaxkwritedir = $(kde_datadir)/kwrite/syntax
+#syntaxkwrite_DATA = cpp.xml c.xml html.xml
 
 kde_services_DATA = kwrite_component.desktop
